ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: service.peijun.me
    http:
      paths:
        - path: /lightsoff(/|$)(.*)
          backend:
            serviceName: lightsoff
            servicePort: 5000
  - host: app.peijun.me
    http:
      paths:
        - path: /shadow(/|$)(.*)
          backend:
            serviceName: lightsoff
            servicePort: 5000
